--- a/_posts/2014-09-10-yantai.md
+++ b/_posts/2014-09-10-yantai.md
@@ -5,4 +5,6 @@ date       : 2014-09-10 09:07:49
 categories : 烟台
 ---
 [//]: # (   ![My helpful screenshot]({{ site.url }}/assets/screenshot.jpg)   )
+
+<!-- more -->
 ![烟台]({{ site.url }}/img/yantai.jpg)
