add tags and archives page

--- a/_posts/2014-09-10-yantai.md
+++ b/_posts/2014-09-10-yantai.md
@@ -3,6 +3,7 @@ layout     : post
 title      : 烟台 
 date       : 2014-09-10 09:07:49
 categories : 烟台
+tags       : yantai
 ---
 [//]: # (   ![My helpful screenshot]({{ site.url }}/assets/screenshot.jpg)   )
 
